--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+    <!--CARRINHO DE COMPRA-->
     <section class="container-carrinho" id="carrinho">
         <nav class="interno-carrinho">
             <nav class="fechar-carrinho" id="fc">✖</nav>
@@ -39,6 +39,7 @@
         </nav>
     </section>
 
+    <!--DADOS ADICIONAIS-->
     <section class="container-dados-adicionais">
         <nav class="dados-externo">
             <div>
@@ -81,6 +82,7 @@
         </nav>
     </section>
 
+    <!--ENTRADA-->
     <section class="container-one">
         <div class="menu">
             <a href="https://www.instagram.com/mmgourmetpx/">
@@ -113,6 +115,7 @@
         </div>
     </section>
 
+    <!--PRODUTOS-->
     <section class="container-prime">
         <section class="container-two" id="HT">
             <div>
@@ -1033,6 +1036,7 @@
         </section>
     </section>
 
+    <!--RODAPÉ-->
     <footer>
         <div>
             <p>CNPJ: 30.055.910/0001-32</p>
