--- a/index.html
+++ b/index.html
@@ -9,23 +9,17 @@
     <link rel="stylesheet" href="./assents/css/responsivo.css">
     <link rel="website icon" type="png" href="./assents/imagens/logo.jpg">
 
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Neucha&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Neucha&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400..900&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Aldrich&family=Bruno+Ace&family=Orbitron:wght@400..900&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Bruno+Ace&family=Orbitron:wght@400..900&display=swap"rel="stylesheet">
 
 </head>
 
 <body>
     <!--CARRINHO DE COMPRA-->
-    <section class="container-carrinho" id="carrinho">
+    <article class="container-carrinho" id="carrinho">
         <nav class="interno-carrinho">
             <nav class="fechar-carrinho" id="fc">✖</nav>
             <h1>🛍 CARRINHO 🛒</h1>
@@ -37,10 +31,10 @@
                 <div class="valor-total">R$ 00.00</div>
             </div>
         </nav>
-    </section>
+    </article>
 
     <!--DADOS ADICIONAIS-->
-    <section class="container-dados-adicionais">
+    <article class="container-dados-adicionais">
         <nav class="dados-externo">
             <div>
                 <p class="retornar">⬅voltar</p>
@@ -80,11 +74,11 @@
                 <input type="button" class="enviar" value="FINALIZAR">
             </div>
         </nav>
-    </section>
+    </article>
 
     <!--ENTRADA-->
-    <section class="container-one">
-        <div class="menu">
+    <header class="container-one">
+        <nav class="menu">
             <a href="https://www.instagram.com/mmgourmetpx/">
                 <img src="./assents/imagens/Icones/instagram.jpg" alt="">
                 <p>instagram</p>
@@ -94,7 +88,7 @@
                 <img src="./assents/imagens/Icones/localizacao.png" alt="">
                 <p>localização</p>
             </a>
-        </div>
+        </nav>
 
         <div class="abertura-carrinho" onclick="abrirCart()">
             <img src="./assents/imagens/Icones/carrinho de compra.png" alt="">
@@ -105,18 +99,18 @@
             <h1>MM GOURMET</h1>
         </div>
 
-        <div class="cardapio">
+        <nav class="cardapio">
             <a href="#HT">HAMBURGUERS TRADICIONAIS</a>
             <a href="#HA">HAMBURGUERS ARTESANAIS</a>
             <a href="#PR">PÃO DE ALHO RECHEADO</a>
             <a href="#BP">BATATA E PORÇÕES</a>
             <a href="#CC">COMPLETÃO COM CHURRASQUINHO</a>
             <a href="#BE">BEBIDAS</a>
-        </div>
-    </section>
+        </nav>
+    </header>
 
     <!--PRODUTOS-->
-    <section class="container-prime">
+    <main class="container-prime">
         <section class="container-two" id="HT">
             <div>
                 <section class="funcionamento">
@@ -1034,7 +1028,7 @@
 
             </div>
         </section>
-    </section>
+    </main>
 
     <!--RODAPÉ-->
     <footer>
@@ -1044,6 +1038,7 @@
         </div>
         <p class="ian">Ian Barbosa</p>
     </footer>
+    
     <script src="./assents/js/script.js"></script>
 </body>
 </html>
